--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,17 @@
             tools:layout_editor_absoluteY="0dp">
 
         </WebView>
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="bottom"
+            app:adSize="SMART_BANNER"
+            app:adUnitId="ca-app-pub-3745729305407822/4091175214"></com.google.android.gms.ads.AdView>
+
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
