--- a/app/src/main/res/drawable/ic_contact.xml
+++ b/app/src/main/res/drawable/ic_contact.xml
@@ -5,5 +5,5 @@
         android:viewportHeight="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M9,4c0,-1.11 0.89,-2 2,-2s2,0.89 2,2 -0.89,2 -2,2 -2,-0.89 -2,-2zM16,13c-0.01,-1.34 -0.83,-2.51 -2,-3 0,-1.66 -1.34,-3 -3,-3s-3,1.34 -3,3v7h2v5h3v-5h3v-4z"/>
+        android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
