--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="white">#ffffff</color>
     <color name="colorAccent">#ff4081</color>
     <color name="darkGrey">#360d32</color>
+    <color name="splash">#061922</color>
+    <color name="black_overlay">#66000000</color>
+
 </resources>
